<resources>
    <string name="app_name">DoReMix</string>
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="user_email">E-mail</string>
    <string name="entradas_apagadas">Entradas Apagadas!</string>
    <string name="nascimento">Data de Nascimento:</string>
    <string name="user_nascimento">DD/MM/AAAA</string>
    <string name="nome_nao_informado">Nome não informado!</string>
    <string name="e_mail_nao_informado">E-mail não informado!</string>
    <string name="email_invalido">E-mail inválido!</string>
    <string name="data_de_nascimento_nao_informada">Data de nascimento não informada!</string>
    <string name="data_de_nascimento_invalida">Data de nascimento inválida!</string>
    <string name="termos_uso">Li e aceito os termos de uso e condições</string>
    <string name="aceite_os_termos">Ops! Falta aceitar os termos para finalizar o cadastro.</string>
    <string name="data_de_nascimento">"Data de Nascimento: "</string>
    <string name="email_valor">"E-mail: "</string>
    <string name="nome_valor">"Nome: "</string>
    <string name="iniciante">Iniciante</string>
    <string name="intermediario">Intermediário</string>
    <string name="avancado">Avançado</string>
    <string name="nivel">Nível de experiência:</string>
    <string name="selecione_um_nivel_de_experiencia">Selecione um nível de experiência</string>
    <string name="nivel_de_experiencia">"Nível de Experiência: "</string>
    <string name="instrumento_principal">Instrumento Principal:</string>
    <string name="guitarra">Guitarra</string>
    <string name="violao">Violão</string>
    <string name="bateria">Bateria</string>
    <string name="baixo">Baixo</string>
    <string name="teclado">Teclado</string>
    <string name="canto">Canto</string>
    <string name="outros">Outros</string>
    <string name="selecione_um_instrumento">Selecione um instrumento</string>
    <string name="descricao">Projeto Desenvolvimento Android</string>
    <string name="descricao_doremix">Projeto - DoReMix\ngerenciador de cifras</string>
    <string name="autoria">Autor: Arthur Aloysio Sottile Serrarens</string>
    <string name="buttonSobre">Sobre</string>
    <string name="setlist_exemplo">Setlist Exemplo</string>
    <string name="sobre_title">Sobre</string>
    <string name="button_cadastrar">Cadastrar</string>
</resources>